--- a/Study-1.html
+++ b/Study-1.html
@@ -8,7 +8,7 @@
         body {
             margin: 0;
             padding: 0;
-            height: 3000px; /* 为了创建可滚动的内容 */
+            height: 3000px;
         }
         #progress-container {
             position: fixed;
