--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>导航</title>
+    <title>导航页</title>
     <style>
         :root {
             --primary-color: #3498db;
