--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                     <div class="link-description">卡片扇形展开动画</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-3.html" class="link">
+                    <div class="link-title">MarkDown示例(WIP)</div>
+                    <div class="link-description">尝试在HTML中嵌入markdown</div>
+                </a>
+            </div>
         </div>
     </div>
 </body>
