--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
             </div>
             <div class="card">
                 <a href="html/Study-4.html" class="link">
-                    <div class="link-title">MarkDown示例(WIP)</div>
-                    <div class="link-description">尝试在HTML中嵌入markdown</div>
+                    <div class="link-title">单页面跳转</div>
+                    <div class="link-description">平滑动画我的最爱😋</div>
                 </a>
             </div>
         </div>
