--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="icons/1f330.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>导航页</title>
     <style>
