--- a/index.html
+++ b/index.html
@@ -100,6 +100,12 @@
                     <div class="link-description">平滑动画我的最爱😋</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-5.html" class="link">
+                    <div class="link-title">Markdown渲染</div>
+                    <div class="link-description">使用Shiki库来对进行Markdown渲染。这何尝不是一种尝试</div>
+                </a>
+            </div>
         </div>
     </div>
 </body>
