--- a/html/Study-5.html
+++ b/html/Study-5.html
@@ -50,10 +50,10 @@
 # JavaScript代码块示例
 
 ```javascript
-function greet(name) {
+function Fuc(name) {
     console.log(`Hello, ${name}!`);
 }
-greet('World');
+Fuc('World');
 ```
 # Java代码块示例
 
