--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         h1 {
             color: var(--text-color);
             text-align: center;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             font-weight: 300;
             font-size: 2.5em;
         }
@@ -71,16 +71,16 @@
             opacity: 0.8;
         }
         .search-container {
-            position: fixed;
-            top: 20px;
-            left: 20px;
             display: flex;
+            justify-content: center;
             align-items: center;
+            margin-bottom: 30px;
         }
         .search-icon {
             font-size: 24px;
             cursor: pointer;
             transition: opacity 0.3s ease;
+            margin-right: 10px;
         }
         #search {
             width: 0;
@@ -95,7 +95,6 @@
         }
         #search.active {
             width: 200px;
-            margin-left: 10px;
         }
         .search-icon.hidden {
             opacity: 0;
