index some changes

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>导航页</title>
     <style>
         :root {
-            --primary-color: #3498db;
-            --hover-color: #2980b9;
-            --background-color: #ecf0f1;
+            --primary-color: #4a90e2;
+            --hover-color: #357abd;
+            --background-color: #f0f0f0;
             --card-color: #ffffff;
-            --text-color: #34495e;
+            --text-color: #333333;
+            --secondary-text-color: #666666;
         }
         body {
             font-family: 'Segoe UI', 'Microsoft YaHei', sans-serif;
@@ -68,7 +69,7 @@
         }
         .link-description {
             font-size: 0.9em;
-            opacity: 0.8;
+            color: var(--secondary-text-color);
         }
         .search-container {
             display: flex;
@@ -81,6 +82,7 @@
             cursor: pointer;
             transition: opacity 0.3s ease;
             margin-right: 10px;
+            color: var(--text-color);
         }
         #search {
             width: 0;
@@ -98,6 +100,9 @@
         }
         .search-icon.hidden {
             opacity: 0;
+        }
+        #search::placeholder {
+            color: var(--secondary-text-color);
         }
     </style>
 </head>
