--- a/index.html
+++ b/index.html
@@ -144,6 +144,12 @@
                     <div class="link-description">使用Shiki库来对进行Markdown渲染。这何尝不是一种尝试</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-6.html" class="link">
+                    <div class="link-title">卡片动画1</div>
+                    <div class="link-description">我貌似是爱上卡片了🥰😇</div>
+                </a>
+            </div>
         </div>
     </div>
 
@@ -180,7 +186,6 @@
             filterCards(this.value);
         });
 
-        // 点击页面其他地方关闭搜索框
         document.addEventListener('click', function(event) {
             const searchContainer = document.querySelector('.search-container');
             const searchInput = document.getElementById('search');
