Blue Ocean / Delete node modules

--- a/index.html
+++ b/index.html
@@ -147,7 +147,13 @@
             <div class="card">
                 <a href="html/Study-6.html" class="link">
                     <div class="link-title">卡片动画1</div>
-                    <div class="link-description">我貌似是爱上卡片了🥰😇</div>
+                    <div class="link-description">卡片扇形展开动画🐟</div>
+                </a>
+            </div>
+            <div class="card">
+                <a href="html/Study-7.html" class="link">
+                    <div class="link-title">Blue Ocean</div>
+                    <div class="link-description">🌊🐟🐢</div>
                 </a>
             </div>
         </div>
