--- a/index.html
+++ b/index.html
@@ -156,6 +156,12 @@
                     <div class="link-description">🌊🐟🐢</div>
                 </a>
             </div>
+            <div class="card">
+                <a href="html/Study-8.html" class="link">
+                    <div class="link-title">⏰</div>
+                    <div class="link-description">个人风格的时钟</div>
+                </a>
+            </div>
         </div>
     </div>
 
