--- a/html/Study-8.html
+++ b/html/Study-8.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>现代风格圆形进度条时钟</title>
+    <title>圆形进度条时钟</title>
     <style>
         body {
             display: flex;
