--- a/html/Study-9.html
+++ b/html/Study-9.html
@@ -57,6 +57,8 @@
         <button onclick="insertMarkdown('`')">行内代码</button>
         <button onclick="insertMarkdown('# ')">标题</button>
         <button onclick="insertMarkdown('- ')">列表</button>
+        <button onclick="insertMarkdown('[我是一个URL链接](https://xiaoliziawa.github.io/HTML-Study/)')">URL</button>
+        <button onclick="insertCodeBlock('html')">HTML代码块</button>
         <button onclick="insertCodeBlock('javascript')">JavaScript代码块</button>
         <button onclick="insertCodeBlock('java')">Java代码块</button>
         <button onclick="insertCodeBlock('python')">Python代码块</button>
