--- a/index.html
+++ b/index.html
@@ -118,6 +118,20 @@
         #search::placeholder {
             color: var(--secondary-text-color);
         }
+        .github-link {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            transition: transform 0.3s ease;
+        }
+        .github-link:hover {
+            transform: scale(1.1);
+        }
+        .github-logo {
+            width: 32px;
+            height: 32px;
+            fill: #24292e;
+        }
     </style>
 </head>
 <body>
@@ -185,6 +199,12 @@
         </div>
     </div>
 
+    <a href="https://github.com/xiaoliziawa/HTML-Study" target="_blank" class="github-link">
+        <svg class="github-logo" viewBox="0 0 16 16" version="1.1" aria-hidden="true">
+            <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
+        </svg>
+    </a>
+
     <script>
         function toggleSearch() {
             const searchInput = document.getElementById('search');
@@ -195,7 +215,7 @@
                 searchInput.focus();
             } else {
                 searchInput.value = '';
-                showAllCards(); // 使用新函数来显示所有卡片
+                showAllCards();
             }
         }
 
@@ -207,7 +227,7 @@
                 const title = card.querySelector('.link-title').textContent.toLowerCase();
                 const description = card.querySelector('.link-description').textContent.toLowerCase();
                 if (title.includes(searchTerm) || description.includes(searchTerm)) {
-                    card.style.display = 'flex'; // 改为 'flex'
+                    card.style.display = 'flex';
                 } else {
                     card.style.display = 'none';
                 }
@@ -217,8 +237,8 @@
         function showAllCards() {
             const cards = document.querySelectorAll('.card');
             cards.forEach(card => {
-                card.style.display = 'flex'; // 使用 'flex' 而不是 'block'
-            });
+                card.style.display = 'flex';
+            });     
         }
 
         document.getElementById('search').addEventListener('input', function() {
